--- a/views/about.html
+++ b/views/about.html
@@ -15,8 +15,9 @@
         <a href="/blog">Blog</a>
     </nav>
 
-    <p>Michael Jhon Carbonel</p>
-    <p>IT32S1 CITE 006</p>
-    <p>3rd yr BSIT</p>
+    <p>Name: Michael Jhon Carbonel</p>
+    <p>Section/Course: IT32S1 CITE 006</p>
+    <p>Year Level: 3rd yr BSIT</p>
+    <p>School: Technological Institute of the Philippines</p>
 </body>
 </html>
